# carpaintr

./: .dockerignore  .drone.yml  .gitignore  .~lock.T1trans.csv#  .~lock.Зоны деталей рисунки.xlsx#  1721626389712_2024-07-21 Программа опсание.docx  CLAUDE.md  Dockerfile  Makefile  README.md  ROUTING-CHANGES.md  SKILL.md  T1trans(1).csv  T1trans.csv  Taskfile.yml  Untitled 1.csv  bot-comparison.md  build.fsx  build.ps1  colors.txt  entrypoint.sh  fakefile.fsx  offload-build.yml  package-lock.json  package.json  simulate-bot-crawl.sh  t1.csv  tdvr.csv  test-multilang.sh  test-seo.sh  transmutate_csv_into_yaml.py  update-routes.sh  verify-routes.sh  yaml_to_binary_matrix.py  Зоны деталей рисунки.xlsx  ОПИСАНИЕ АЛГОРИТМА.docx  Печать расчеты описание.docx  Таблица 1.xlsx
.claude/: settings.json  settings.local.json
.claude/commands/: backend.md
backend/: go.mod  go.sum  main.go  users.db  users_initial.json
backend-ex/: .gitignore
backend-integration-tests/: .env.example  .gitignore  README.md  Taskfile.yml  pyproject.toml  quickstart.sh
backend-integration-tests/docs/: authentication.md  deployment.md  fixtures.md  setup.md
backend-integration-tests/tests/: README.md  conftest.py  helpers.py  pdfgen_mock.py  populate_licenses.py  populate_users.py  run_pdfgen_mock.py  seed_users.py  test_auth.py  test_calc_flow.py  test_example_advanced.py.example  test_health.py  test_license.py  test_license_protection.py  test_pdf_generation.py  test_seeded_users.py
backend-service-rust/: Cargo.toml  admins.txt  config.env
backend-service-rust/src/: cleanup.rs  errors.rs  exlogging.rs  license_manager.rs  main.rs  state.rs
backend-service-rust/src/api/: editor_endpoints.rs  mod.rs
backend-service-rust/src/api/v1/: admin.rs  admin_editor_endpoints.rs  attachments.rs  auth.rs  editor_endpoints.rs  license.rs  mod.rs  notifications.rs  support.rs  templating_endpoints.rs  user.rs
backend-service-rust/src/api/v1/calc/: data_endpoints.rs  mod.rs  output_endpoints.rs  persistence_endpoints.rs  plugin_endpoints.rs
backend-service-rust/src/auth/: admin_check.rs  invite.rs  mod.rs
backend-service-rust/src/cache/: license_cache.rs  mod.rs
backend-service-rust/src/calc/: car_class_to_body_type.rs  cars.rs  constants.rs  mod.rs  seasons.rs  t2.rs  table_processing.rs  templating.rs
backend-service-rust/src/db/: attachment.rs  mod.rs  notifications.rs  requests.rs  users.rs
backend-service-rust/src/middleware/: mod.rs
backend-service-rust/src/models/: calculations.rs  invite.rs  mod.rs  notifications.rs  requests.rs  table_validation.rs
backend-service-rust/src/transactionalfs/: mod.rs
backend-service-rust/src/utils/: filesystem.rs  mod.rs  money.rs  random.rs  stringext.rs
backend-service-rust/static/: index.html
backend-service-rust/tables/: FilesystemBrowser.jsx  t1.csv
backend/data/: carreader.go  colors.go  pathspec.go  seasons.go  utils.go
backend/utils/: utils.go
carpaintr-front/: .gitignore  README.md  custom-theme.less  cypress.config.js  cypress.env.example.json  eslint.config.js  index.html  package-lock.json  package.json  processors_response_example_for_claude.txt  styles.less  vite.config.js
carpaintr-front/cypress/: README.md
carpaintr-front/public/: robots.txt  site.webmanifest  version.json
carpaintr-front/src/: App.css  App.jsx  ErrorBoundary.jsx  index.css  main.jsx  theme-overrides.css  version.js  vindecoder.js
common/cars/: audi.yaml  seat.yaml  volkswagen.yaml
common/doc_templates/: calculation_ua.html
common/global/: age_koefficients.yaml  parts_repair_types.yaml  seasons.yaml
common/procs/: РАБОТЫ_АРМАТУРНЫЕ_СНЯТИЕ_УСТАНОВКА_ДЛЯ_РЕМОНТА.js
common/samples/: hatchback5doors_C_2020_2025-09-01T210440018935700Z.json
common/tables/: class_body_mapping.yaml  (+3 more)
data/: .gitignore
docs/: README.md  api.md  backup.md  calculation-engine.md  deployment.md  development.md  missing_tables.md  processors-by-requirements.md  restore-from-local-examples.md  secrets-management.md
k8s-deploy/: k3s-deployment.yaml  pdfgen-k3s-deployment.yaml  traefik-ingressroute.yaml
load_testing/: .pdm-python  README.md  RESULTS.md  endpoints.py  loadtest.py  pyproject.toml  reporting.py  utils.py  workloads.py
pdf_backend/: .dockerignore  Dockerfile  app.py  example.json  paycheck_data.json  requirements.txt
pdf_backend_playwright/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  sample.json
pdf_backend_playwright/static/: style.css
scripts/: README.md  cypress-e2e.sh  dev-watch-win.bat  dev-watch.sh  ensure-dev-stack.sh  fix_t2_body_types.py  init-secrets.sh  kill-dev-win.bat  load-dev-data.sh  mock-pdf-server.py  populate-seed-users.sh  reset-local-dev-kill.sh  reset-local-dev.sh  restore-from-backup.sh
utils/: rearrange_repair_types.py  repairs_input.csv  t1fixer.py
(+268 files in other folders)
