[project]
name = "backend-integration-tests"
version = "0.1.0"
description = "Integration tests for carpaintr / Autolab backend API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=0.25",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-n 4 --dist loadfile -v --strict-markers --tb=short"
markers = [
    "auth: Authentication tests",
    "admin: Admin-specific tests",
    "license: License management tests",
    "pdf: PDF/HTML generation (requires PDF mock)",
    "calc: Calculation flow tests (data discovery, storage, PDF generation)",
    "integration: Integration tests requiring running backend",
]
