[project]
name = "pdf-backend-playwright"
version = "0.1.0"
description = "Lightweight PDF generation service using Playwright"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "jinja2>=3.1.0",
    "playwright>=1.48.0",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
